force-app/main/default/objects/Stock__c/Stock__c.object-meta.xml
<CustomObject>
    <label>Stock</label>
    <nameField>
        <displayFormat>STK-{0}</displayFormat>
        <label>Nom de Stock</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stocks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>