force-app/main/default/objects/Stock__c/fields/Article__c.field-meta.xml
<CustomField>
    <fullName>Article__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Article</label>
    <referenceTo>Article__c</referenceTo>
    <relationshipLabel>Stocks</relationshipLabel>
    <relationshipName>Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>