force-app/main/default/objects/Stock__c/fields/Description_of_article__c.field-meta.xml
<CustomField>
    <fullName>Description_of_article__c</fullName>
    <formula>Article__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description of article</label>
    <type>Text</type>
</CustomField>