force-app/main/default/objects/Stock__c/fields/Marque__c.field-meta.xml
<CustomField>
    <fullName>Marque__c</fullName>
    <formula>Article__r.Fabriquant__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marque</label>
    <type>Text</type>
</CustomField>