force-app/main/default/objects/Stock__c/fields/Quantit_entr_e__c.field-meta.xml
<CustomField>
    <fullName>Quantit_entr_e__c</fullName>
    <description>Somme des quantités entrées</description>
    <label>Quantité entrée</label>
    <summarizedField>Mouvement__c.Quantit__c</summarizedField>
    <summaryFilterItems>
        <field>Mouvement__c.Sens__c</field>
        <operation>equals</operation>
        <value>Entrée</value>
    </summaryFilterItems>
    <summaryForeignKey>Mouvement__c.Stock__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>