force-app/main/default/objects/Stock__c/fields/Quantit_restant__c.field-meta.xml
<CustomField>
    <fullName>Quantit_restant__c</fullName>
    <label>Quantité restante</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>