force-app/main/default/objects/Stock__c/fields/Quantit_s_commander__c.field-meta.xml
<CustomField>
    <fullName>Quantit_s_commander__c</fullName>
    <label>Quantités à commander</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>