force-app/main/default/objects/Stock__c/fields/Quantit_sortie__c.field-meta.xml
<CustomField>
    <fullName>Quantit_sortie__c</fullName>
    <description>Somme des quantités sorties</description>
    <label>Quantité sortie</label>
    <summarizedField>Mouvement__c.Quantit__c</summarizedField>
    <summaryFilterItems>
        <field>Mouvement__c.Sens__c</field>
        <operation>equals</operation>
        <value>Sortie</value>
    </summaryFilterItems>
    <summaryForeignKey>Mouvement__c.Stock__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>