force-app/main/default/objects/Stock__c/fields/Seuil__c.field-meta.xml
<CustomField>
    <fullName>Seuil__c</fullName>
    <label>Seuil</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>