force-app/main/default/objects/Stock__c/fields/tech_email__c.field-meta.xml
<CustomField>
    <fullName>tech_email__c</fullName>
    <defaultValue>&quot;serviceclient@dentegolab.fr&quot;</defaultValue>
    <label>tech_email</label>
    <type>Email</type>
</CustomField>