force-app/main/default/objects/Stock__c/fields/Type_de_stock__c.field-meta.xml
<CustomField>
    <fullName>Type_de_stock__c</fullName>
    <defaultValue>&quot;CONSO&quot;</defaultValue>
    <label>Type de stock</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CONSO</fullName>
            </value>
            <value>
                <fullName>IMMO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>