force-app/main/default/objects/Stock__c/fields/Type_of_article__c.field-meta.xml
<CustomField>
    <fullName>Type_of_article__c</fullName>
    <formula>TEXT(Article__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of article</label>
    <type>Text</type>
</CustomField>