force-app/main/default/objects/Stock__c/fields/Valeur_du_stock__c.field-meta.xml
<CustomField>
    <fullName>Valeur_du_stock__c</fullName>
    <formula>Article__r.Prix_d_achat__c * Quantit_restant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valeur du stock</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>