force-app/main/default/objects/Stock__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quantit_restant__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>