force-app/main/default/objects/Stock__c/listViews/My_Stock.listView-meta.xml
<ListView>
    <fullName>My_Stock</fullName>
    <columns>NAME</columns>
    <columns>Article__c</columns>
    <columns>Quantit_restant__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Mine</filterScope>
    <label>My Stock</label>
</ListView>