force-app/main/default/objects/Stock__c/listViews/STOCK_DIRECT.listView-meta.xml
<ListView>
    <fullName>STOCK_DIRECT</fullName>
    <columns>Marque__c</columns>
    <columns>Article__c</columns>
    <columns>Seuil__c</columns>
    <columns>Quantit_restant__c</columns>
    <columns>Type_of_article__c</columns>
    <columns>Description_of_article__c</columns>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>DIRECT</value>
    </filters>
    <label>STOCK DIRECT</label>
</ListView>