force-app/main/default/objects/Stock__c/listViews/stock_sun.listView-meta.xml
<ListView>
    <fullName>stock_sun</fullName>
    <columns>Marque__c</columns>
    <columns>Article__c</columns>
    <columns>Seuil__c</columns>
    <columns>Quantit_restant__c</columns>
    <columns>Type_of_article__c</columns>
    <columns>Description_of_article__c</columns>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>contains</operation>
        <value>yoyo</value>
    </filters>
    <label>STOCK SUN STAR</label>
</ListView>